Replace copyBack with an unmodifiable view getter (list element)